@startuml
skinparam dpi 1250
skinparam linetype ortho
'https://plantuml.com/class-diagram

set separator ::

abstract class CDPins::Pin{
    # const int pin
    + Pin(int _pin)
    + {abstract} void begin()
    + unsigned int value
}

class CDPins::EntradaDigital {
	+ void begin()
	+ unsigned int read()
	+ unsigned long pulseIn()
}

class CDPins::EntradaAnalogica {
	+ void begin()
	+ unsigned int read()
}

class CDPins::SortidaDigital {
	+ void begin()
	+ void on()
	+ void off()
	+ void on(unsigned long t)
	+ void off(unsigned long t)
	+ void set(unsigned int estat)
	+ void set(unsigned int estat, unsigned long t)
	+ unsigned int toggle()
	+ void pulseOut()
}

class CDPins::SortidaAnalogica {
	+ void begin()
	+ void set(unsigned int valor)
	+ void set(int valor, int min, int max)
}

together {
	struct Pos<T> {
    	T x
    	T y
    }

    enum Axis {
    	X
    	Y
    }

    class Joystick {
        - int deadzone
        - int* getPosPtr(Axis axis)
        - Pos<int> pos
        # EntradaAnalogica* pinX
        # EntradaAnalogica* pinY
        + Joystick(int _pinX, int _pinY, int deadzone)
        + bool read(Axis axis)
        + bool read()
        + Pos<unsigned long> lastChanged
        + const int* getPos(Axis axis)
    }
}

together {
	package FastLED <<rectangle>> #EEE {
		class FastLED <<extern>> {}
		hide FastLED members

		class CRGB <<extern>> {}
		hide CRGB members

		enum HTMLColorCode <<extern>> {}
		hide HTMLColorCode members

		CRGB +-- HTMLColorCode
	}


	class NeoPixel {
		+ void begin()
		+ void refresh()
		+ CRGB list[]
	}
}

package DHT <<rectangle>> #EEE {
	class DHT <<extern>> {}
	hide DHT members
}

class Range {
	- int size
	- bool cycle
	- const int* range
	+ Range(const int _range[], int _size, bool _cycle)
	+ int getLevel(int n)
}

package LiquidCrystal_I2C <<rectangle>> #EEE {
	class LiquidCrystal_I2C <<extern>> {}
	hide LiquidCrystal_I2C members
}

class Pantalla {
	- unsigned long t
	- unsigned long maxT
	- Temperatura* temp
	- Humitat* hum
	- int* tempSetting
	+ Pantalla(TempHum* _tempHum, int* _tempSetting)
	+ void begin()
	+ void update(string upperLine, string lowerLine)
    + void update(string upperLine, string lowerLine, unsigned long t)
    + void idle()
    + void checkTime()
}

class Sensor {
	- CRGB* led
	- Range range
	# bool process(double _value, CRGB::HTMLColorCode colors[])
	+ Sensor(CRGB* _led, Range _range)
	+ {abstract} void begin()
	+ {abstract} void read()
	+ double value
	+ {static} DHT initDHT(unsigned char)
}

class Humitat {
	- {static} const int rangesList[]
	- {static} CRGB::HTMLColorCode colors[]
	- DHT* dht
	+ Humitat(DHT* _dht, CRGB* _led)
	+ void begin()
	+ void read()
}

class Temperatura {
	- {static} const int rangesList[]
	- {static} CRGB::HTMLColorCode colors[]
	- DHT* dht
	- CRB* ledSetting
	+ Temperatura(DHT* _dht, CRGB* _ledTemp, CRGB* _ledSetting)
	+ void begin()
	+ void read()
}

EntradaAnalogica <|-- "public" Pin
SortidaAnalogica <|-- "public" Pin
EntradaDigital <|-up- "public" Pin
SortidaDigital <|-- "public" Pin

Joystick "2" *-- EntradaAnalogica
Joystick "2" *-- Pos
Joystick --- Axis

NeoPixel *-- FastLED::CRGB
NeoPixel --- FastLED::FastLED

Pantalla <|-- "private" LiquidCrystal_I2C::LiquidCrystal_I2C
Pantalla *-- Temperatura
Pantalla *-- Humitat

Sensor *-- Range
Sensor --- DHT::DHT

Temperatura <|-- "public" Sensor
Humitat <|-- "public" Sensor

Temperatura *-- DHT::DHT
Temperatura *-- CRGB
Humitat *-- DHT::DHT
Humitat *-- CRGB


hide NeoPixel members
hide Pantalla members
hide Temperatura members
hide Humitat members
hide Sensor members
hide Range members
hide Joystick members
hide EntradaDigital members
hide SortidaDigital members
hide EntradaAnalogica members
hide SortidaAnalogica members
hide Pin members
hide Pos members
hide Axis members
@enduml